# Omni-Launcher-MC

./: .gitignore  BUILD_SUMMARY.md  CONTRIBUTING.md  HANDOFF.md  IMPROVEMENTS.txt  LICENSE  MISSING.txt  README.md  eslint.config.js  index.html  install.ps1  install.sh  latest.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.mimocode/plans/: 1784726752708-clever-orchid.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/api/: aggregator.rs  auth.rs  curseforge.rs  minecraft.rs  mod.rs  modrinth.rs
src-tauri/src/api/loaders/: fabric.rs  forge.rs  neoforge.rs  quilt.rs
src-tauri/src/commands/: auth.rs  categorize.rs  graphics.rs  groups.rs  hooks.rs  import.rs  instances.rs  java.rs  library.rs  loaders.rs  logs.rs  minecraft.rs  mirrors.rs  mod.rs  modloader_matrix.rs  mrpack_export.rs  multi_launch.rs  platform.rs  process.rs  resource_packs.rs  screenshots.rs  shortcuts.rs  skins.rs  templates.rs  worlds.rs
src-tauri/src/db/: accounts.rs  instances.rs  migrations.rs  mod.rs  mods.rs  settings.rs
src-tauri/src/models/: mod.rs
src-tauri/src/utils/: download.rs  file_ops.rs  java.rs  launcher.rs  loaders.rs  mirrors.rs  mod.rs  modpack.rs  paths.rs  process_manager.rs  progress.rs  sharing.rs  validate.rs
src/components/common/: Button.tsx  DownloadPanel.tsx  DownloadProgress.tsx  ErrorBoundary.tsx  IconPicker.tsx  JavaPicker.tsx  LoaderVersionSelector.tsx  Modal.tsx  PageTransition.tsx  ProgressBar.tsx  SearchInput.tsx  ShareDialog.tsx  Skeleton.tsx  Toast.tsx
src/components/instance/: ExportMrpackModal.tsx  GameConsole.tsx  GraphicsSettingsTab.tsx  GroupManager.tsx  InstanceCreator.tsx  ModCategorizer.tsx  ModloaderMatrix.tsx  NotesTab.tsx  PacksTab.tsx  ResourcePacksTab.tsx  ScreenshotsTab.tsx
src/components/instances/: InstanceCard.tsx  InstanceCreator.tsx
src/components/layout/: GroupSidebar.tsx  PageContainer.tsx  RunningInstancesBar.tsx  Sidebar.tsx
src/components/settings/: MirrorSelector.tsx
src/hooks/: useActiveAccount.ts  useAppInit.ts  useDownloadProgress.ts  useKeyboardShortcuts.ts
src/lib/: i18n.test.ts  i18n.ts  tauri.ts
src/pages/: Discover.tsx  Home.tsx  Import.tsx  InstanceDetail.tsx  InstanceDetailPage.tsx  Library.tsx  Settings.tsx  Templates.tsx  WorldsPage.tsx
src/stores/: auth.ts  i18n.ts  instances.test.ts  instances.ts  notificationStore.ts  settings.ts
